# soma-audio-ai

./: BUILD.md  BUILD_GUIDE.md  README.md  build.sh  build_windows.bat  launcher.py  pyproject.toml  pytest.ini  runtime_hook_torch.py  soma.spec  version_info.txt
gui/: __init__.py  main_window.py
gui/components/: __init__.py  audio_input_panel.py  model_config_panel.py  output_panel.py  status_bar.py
gui/styles/: dark_theme.py
gui/workers/: __init__.py  conversion_worker.py
src/: __init__.py  exceptions.py  main.py
src/config/: __init__.py  config.py  defaults.py
src/converters/: __init__.py  converter.py
src/effects/: __init__.py  base.py  eq.py  pitch.py  reverb.py
src/gui/: __init__.py  app.py  main.py  styles.py
src/gui/pages/: __init__.py  base.py  comparison.py  dashboard.py  inference.py  models.py  separation.py  settings.py  training.py
src/gui/utils/: __init__.py  common.py  constants.py  settings_manager.py
src/gui/widgets/: __init__.py  navigation.py
src/pipeline/: __init__.py  pipeline.py
src/security/: __init__.py  audio_validator.py  model_loader.py  path_validator.py
src/separators/: __init__.py  audio_separator.py  base.py  demucs_separator.py  msst_separator.py
src/storage/database/: db.py
src/storage/memory/: memory_saver.py
src/storage/s3/: s3_storage.py
src/training/: README.md  __init__.py  cli.py  config.py  cover_pipeline.py  dataset.py  feature_extractor.py  inference.py  preprocess.py  trainer.py
src/utils/: __init__.py  audio_io.py  logger.py  validator.py
src/utils/audio/: __init__.py  validation.py
src/utils/file/: __init__.py  file.py  file_utils.py
src/voice_converters/: __init__.py  base.py  factory.py  rvc_converter.py  rvc_models.py  sovits_converter.py  sovits_models.py
tests/: conftest.py  pytest.ini
tests/test_config/: test_config.py
tests/test_effects/: test_effects.py
tests/test_security/: test_security.py
tests/test_separators/: test_separators.py
tests/test_training/: __init__.py  test_training.py
tests/test_utils/: test_audio_utils.py  test_audio_validation.py
tests/test_voice_converters/: test_voice_converters.py
(+13 files in other folders)
